# battlebots-firmware

./: .gitignore  Cargo.toml  README.md  x.sh
.cargo/: config.toml
.github/workflows/: rust-ci.yml
bins/: Cargo.toml  wokwi.toml
bins/.cargo/: config.toml
bins/src/: lib.rs
bins/src/dshot/: mod.rs
bins/tests/: h3lis311_math.rs
drivers/: Cargo.toml
drivers/h3lis311/: Cargo.toml
drivers/h3lis311/src/: lib.rs
src/drivers/: mod.rs
src/drivers/h3lis331/: interrupt.rs  mod.rs  register.rs
src/drivers/ws2812/: mod.rs
